--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,11 @@ dependencies:
   carousel_slider: ^4.0.0
   image_picker: ^0.8.4+2
   curved_navigation_bar: ^1.0.3
-
-
+  flutter_rating_bar: 4.0.1
+  flutter_bloc: ^8.1.1
+  meta: ^1.10.0
+  path: ^1.8.0
+  sqflite_common_ffi: ^2.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +45,11 @@ dependencies:
   flutter_carousel_slider: ^1.1.0
   http: ^1.2.1
   sqflite: ^2.3.3
+  google_fonts: ^6.2.1
+  intl: ^0.19.0
+  flutter_secure_storage: ^9.2.2
+  permission_handler: ^11.3.1
+  
 
 dev_dependencies:
   flutter_test:
