--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.19.0
   flutter_secure_storage: ^9.2.2
   permission_handler: ^11.3.1
+  shared_preferences: ^2.2.3
   
 
 dev_dependencies:
